# corexus

./: README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/alembic/versions/: 0001_add_user_fields.py
backend/src/: auth.py  models.py  schemas.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: PrivateRoute.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx
